--- a/index.html
+++ b/index.html
@@ -392,5 +392,8 @@ h2 { font-size: 1em; border-top: 1px solid #ddd; padding-top: 5px; }
     
 </script>
 </div>
+<script src="//static.getclicky.com/js" type="text/javascript"></script>
+<script type="text/javascript">try{ clicky.init(66493509); }catch(e){}</script>
+<noscript><p><img alt="Clicky" width="1" height="1" src="//in.getclicky.com/66493509ns.gif" /></p></noscript>
 </body>
 </html>
